--- a/build.gradle
+++ b/build.gradle
@@ -52,7 +52,7 @@ dependencies {
     testCompile "org.grails:grails-plugin-testing"
 
     // JSoup lib
-    compile 'org.jsoup:jsoup:1.8.3'
+    compile "org.jsoup:jsoup:$jsoupVersion"
 }
 
 task wrapper(type: Wrapper) {
