Update to Gradle 7.6.2

--- a/build.gradle
+++ b/build.gradle
@@ -1,28 +1,18 @@
-buildscript {
-    ext {
-        grailsVersion = project.grailsVersion
-    }
-    repositories {
-        mavenLocal()
-        maven { url "https://repo.grails.org/grails/core" }
-    }
-    dependencies {
-        classpath "org.grails:grails-gradle-plugin:$grailsVersion"
-    }
+plugins {
+    id "org.grails.grails-plugin" version "6.0.0"   // adjust to your Grails version (e.g., 5.x or 6.x)
+    id "org.grails.grails-plugin-publish"
+    id "org.grails.grails-gsp"
+    id "idea"
+    id "eclipse"
 }
 
-version "1.1"
-group "org.grails.plugins"
-
-apply plugin:"eclipse"
-apply plugin:"idea"
-apply plugin:"org.grails.grails-plugin"
-apply plugin:"org.grails.grails-plugin-publish"
-apply plugin:"org.grails.grails-gsp"
+version = "1.1"
+group = "org.grails.plugins"
 
 ext {
-    grailsVersion = project.grailsVersion
-    gradleWrapperVersion = project.gradleWrapperVersion
+    grailsVersion = project.hasProperty('grailsVersion') ? project.grailsVersion : '6.0.0'
+    gradleWrapperVersion = project.hasProperty('gradleWrapperVersion') ? project.gradleWrapperVersion : '7.6.2'
+    jsoupVersion = project.hasProperty('jsoupVersion') ? project.jsoupVersion : '1.18.1'
 }
 
 repositories {
@@ -34,29 +24,33 @@ dependencyManagement {
     imports {
         mavenBom "org.grails:grails-bom:$grailsVersion"
     }
-    applyMavenExclusions false
+    applyMavenExclusions = false
 }
 
 dependencies {
-    compile "org.springframework.boot:spring-boot-starter-logging"
-    compile "org.springframework.boot:spring-boot-autoconfigure"
-    compile "org.grails:grails-core"
-    compile "org.springframework.boot:spring-boot-starter-actuator"
-    compile "org.springframework.boot:spring-boot-starter-tomcat"
-    compile "org.grails:grails-dependencies"
-    compile "org.grails:grails-web-boot"
-    console "org.grails:grails-console"
-    profile "org.grails.profiles:web-plugin"
-    provided "org.grails:grails-plugin-services"
-    provided "org.grails:grails-plugin-domain-class"
-    testCompile "org.grails:grails-plugin-testing"
+    implementation "org.springframework.boot:spring-boot-starter-logging"
+    implementation "org.springframework.boot:spring-boot-autoconfigure"
+    implementation "org.grails:grails-core"
+    implementation "org.springframework.boot:spring-boot-starter-actuator"
+    implementation "org.springframework.boot:spring-boot-starter-tomcat"
+    implementation "org.grails:grails-dependencies"
+    implementation "org.grails:grails-web-boot"
 
-    // JSoup lib
-    compile "org.jsoup:jsoup:$jsoupVersion"
+    consoleOnly "org.grails:grails-console"
+    profile "org.grails.profiles:web-plugin"
+
+    compileOnly "org.grails:grails-plugin-services"
+    compileOnly "org.grails:grails-plugin-domain-class"
+
+    testImplementation "org.grails:grails-plugin-testing"
+
+    // JSoup library
+    implementation "org.jsoup:jsoup:$jsoupVersion"
 }
 
-task wrapper(type: Wrapper) {
+tasks.named('wrapper') {
     gradleVersion = gradleWrapperVersion
+    distributionType = Wrapper.DistributionType.ALL
 }
 
 grailsPublish {
@@ -67,7 +61,7 @@ grailsPublish {
     }
     title = "html-cleaner"
     desc = "Grails HTML Cleaner plugin"
-    developers = [benorama:"Benoit Hediard"]
+    developers = [benorama: "Benoit Hediard"]
     portalUser = ""
     portalPassword = ""
 }
